tests/ui/args-subcommand-non-subcommand.stderr
error[E0277]: `Deep` is not a `palc::Subcommand`
 --> tests/ui/args-subcommand-non-subcommand.rs:4:11
  |
4 |     deep: Deep,
  |           ^^^^ this type is expected to have `derive(palc::Subcommand)` but it is not
  |
help: the trait `Subcommand` is not implemented for `Deep`
 --> tests/ui/args-subcommand-non-subcommand.rs:7:1
  |
7 | struct Deep {}
  | ^^^^^^^^^^^

error[E0277]: `Subargs` is not a `palc::Subcommand`
  --> tests/ui/args-subcommand-non-subcommand.rs:12:10
   |
12 |     cmd: Subargs,
   |          ^^^^^^^ this type is expected to have `derive(palc::Subcommand)` but it is not
   |
help: the trait `Subcommand` is not implemented for `Subargs`
  --> tests/ui/args-subcommand-non-subcommand.rs:16:1
   |
16 | struct Subargs {}
   | ^^^^^^^^^^^^^^
